lightbox fix to avoid shifting on error message

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -122,7 +122,7 @@ body.has-DonationLightbox {
     padding-top: 30px;
     @include mq(desktop) {
       max-width: 880px;
-      height: 550px;
+      height: 620px;
       padding-top: 0;
       margin: auto;
     }
@@ -134,6 +134,7 @@ body.has-DonationLightbox {
         display: flex;
         overflow: hidden;
         height: 100%;
+        background: #fff;
       }
       .left {
         position: relative;
@@ -146,7 +147,7 @@ body.has-DonationLightbox {
           position: relative;
           transition: 0.3s transform ease-in-out;
           overflow: hidden;
-          min-height: 380px;
+          min-height: 620px;
           object-fit: cover;
           video {
             display: block;
@@ -467,7 +468,7 @@ body.has-DonationLightbox {
         position: relative;
         width: 100%;
         max-width: 400px;
-        height: 550px;
+        height: 620px;
         overflow: hidden;
         background-color: #fff;
         display: flex;
@@ -496,6 +497,7 @@ body.has-DonationLightbox {
           width: 350px;
           height: 100%;
           margin: auto;
+          min-height: 300px;
         }
       }
 
@@ -637,11 +639,10 @@ body.has-DonationLightbox {
   .error-message {
     position: absolute;
     transition: bottom 0.3s ease-in-out;
-    bottom: -100px;
     left: 0;
     z-index: 5;
     width: 100%;
-    height: 100px;
+    height: 0;
     background-color: rgb(167, 8, 8);
     color: #fff;
     display: flex;
@@ -717,6 +718,7 @@ body.has-DonationLightbox {
     }
     &.dl-is-visible {
       bottom: 0;
+      height: 50px;
     }
   }
   &.thank-you {
